check for undefined, use current jdk